--- a/retrieve_movie_data.ipynb
+++ b/retrieve_movie_data.ipynb
@@ -657,6 +657,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract the title from the \"headline.main\" column and\n",
+    "# save it to a new column \"title\"\n",
+    "# Title is between unicode characters \\u2018 and \\u2019. \n",
+    "# End string should include \" Review\" to avoid cutting title early\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
