--- a/retrieve_movie_data.ipynb
+++ b/retrieve_movie_data.ipynb
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2202,353 +2202,15 @@
        "7           [French]                                    [France]  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Convert the results to a DataFrame\n",
-    "movie_results_df = pd.DataFrame(tmdb_movies_list)\n",
-    "movie_results_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>original_title</th>\n",
-       "      <th>budget</th>\n",
-       "      <th>genre</th>\n",
-       "      <th>language</th>\n",
-       "      <th>spoken_languages</th>\n",
-       "      <th>homepage</th>\n",
-       "      <th>overview</th>\n",
-       "      <th>popularity</th>\n",
-       "      <th>runtime</th>\n",
-       "      <th>revenue</th>\n",
-       "      <th>release_date</th>\n",
-       "      <th>vote_average</th>\n",
-       "      <th>vote_count</th>\n",
-       "      <th>production_countries</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>The Attachment Diaries</td>\n",
-       "      <td>El apego</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[Drama, Mystery, Thriller, Horror]</td>\n",
-       "      <td>es</td>\n",
-       "      <td>[Spanish]</td>\n",
-       "      <td></td>\n",
-       "      <td>Argentina, 1970s. A desperate young woman goes...</td>\n",
-       "      <td>0.708</td>\n",
-       "      <td>102</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2021-10-07</td>\n",
-       "      <td>4.000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[Argentina]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>You Can Live Forever</td>\n",
-       "      <td>You Can Live Forever</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[Drama, Romance]</td>\n",
-       "      <td>en</td>\n",
-       "      <td>[French, English]</td>\n",
-       "      <td>https://gooddeedentertainment.com/you-can-live...</td>\n",
-       "      <td>When Jaime, a gay teenager, is sent to live in...</td>\n",
-       "      <td>12.027</td>\n",
-       "      <td>96</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2023-03-24</td>\n",
-       "      <td>7.643</td>\n",
-       "      <td>21</td>\n",
-       "      <td>[Canada]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A Tourist's Guide to Love</td>\n",
-       "      <td>A Tourist's Guide to Love</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[Romance, Comedy, Adventure]</td>\n",
-       "      <td>en</td>\n",
-       "      <td>[English]</td>\n",
-       "      <td>https://www.netflix.com/title/81424906</td>\n",
-       "      <td>After an unexpected break up, a travel executi...</td>\n",
-       "      <td>25.369</td>\n",
-       "      <td>96</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2023-04-21</td>\n",
-       "      <td>6.389</td>\n",
-       "      <td>122</td>\n",
-       "      <td>[United States of America]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Other People's Children</td>\n",
-       "      <td>Les Enfants des autres</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[Drama]</td>\n",
-       "      <td>fr</td>\n",
-       "      <td>[French]</td>\n",
-       "      <td>https://www.wildbunch.biz/movie/other-peoples-...</td>\n",
-       "      <td>Rachel loves her life, her students, her frien...</td>\n",
-       "      <td>16.246</td>\n",
-       "      <td>104</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2022-09-21</td>\n",
-       "      <td>6.900</td>\n",
-       "      <td>137</td>\n",
-       "      <td>[France]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>One True Loves</td>\n",
-       "      <td>One True Loves</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[Romance, Drama, Comedy]</td>\n",
-       "      <td>en</td>\n",
-       "      <td>[English]</td>\n",
-       "      <td></td>\n",
-       "      <td>Emma and Jesse are living the perfect life tog...</td>\n",
-       "      <td>28.872</td>\n",
-       "      <td>100</td>\n",
-       "      <td>37820</td>\n",
-       "      <td>2023-04-07</td>\n",
-       "      <td>6.681</td>\n",
-       "      <td>36</td>\n",
-       "      <td>[Germany, United States of America]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150</th>\n",
-       "      <td>The Last Face</td>\n",
-       "      <td>The Last Face</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[Drama]</td>\n",
-       "      <td>en</td>\n",
-       "      <td>[English, Portuguese]</td>\n",
-       "      <td></td>\n",
-       "      <td>Miguel, a heroic Spanish doctor, puts himself ...</td>\n",
-       "      <td>9.081</td>\n",
-       "      <td>130</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2017-01-11</td>\n",
-       "      <td>5.617</td>\n",
-       "      <td>184</td>\n",
-       "      <td>[United States of America]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>151</th>\n",
-       "      <td>Lost in Paris</td>\n",
-       "      <td>Paris pieds nus</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[Comedy]</td>\n",
-       "      <td>fr</td>\n",
-       "      <td>[French]</td>\n",
-       "      <td></td>\n",
-       "      <td>Fiona visits Paris for the first time to assis...</td>\n",
-       "      <td>6.798</td>\n",
-       "      <td>83</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2017-01-14</td>\n",
-       "      <td>6.051</td>\n",
-       "      <td>108</td>\n",
-       "      <td>[Belgium, France]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>152</th>\n",
-       "      <td>The Other Half</td>\n",
-       "      <td>The Other Half</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[Drama, Comedy, Romance]</td>\n",
-       "      <td>en</td>\n",
-       "      <td>[English]</td>\n",
-       "      <td></td>\n",
-       "      <td>When English Mark surprises his American bride...</td>\n",
-       "      <td>1.058</td>\n",
-       "      <td>94</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2006-05-15</td>\n",
-       "      <td>6.708</td>\n",
-       "      <td>12</td>\n",
-       "      <td>[United Kingdom]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153</th>\n",
-       "      <td>The Ottoman Lieutenant</td>\n",
-       "      <td>The Ottoman Lieutenant</td>\n",
-       "      <td>40000000</td>\n",
-       "      <td>[Romance, Drama, War]</td>\n",
-       "      <td>en</td>\n",
-       "      <td>[English, Turkish]</td>\n",
-       "      <td>https://www.uphe.com/movies/the-ottoman-lieute...</td>\n",
-       "      <td>Lillie, a determined American woman, ventures ...</td>\n",
-       "      <td>12.097</td>\n",
-       "      <td>111</td>\n",
-       "      <td>413844</td>\n",
-       "      <td>2017-03-10</td>\n",
-       "      <td>6.150</td>\n",
-       "      <td>236</td>\n",
-       "      <td>[Turkey, United States of America]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154</th>\n",
-       "      <td>Rich in Love 2</td>\n",
-       "      <td>Ricos de Amor 2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[Romance, Comedy]</td>\n",
-       "      <td>pt</td>\n",
-       "      <td>[Portuguese]</td>\n",
-       "      <td></td>\n",
-       "      <td>When the idealistic Paula resumes her work as ...</td>\n",
-       "      <td>33.808</td>\n",
-       "      <td>89</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2023-06-02</td>\n",
-       "      <td>6.925</td>\n",
-       "      <td>60</td>\n",
-       "      <td>[Brazil]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>155 rows × 15 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         title             original_title    budget  \\\n",
-       "0       The Attachment Diaries                   El apego         0   \n",
-       "1         You Can Live Forever       You Can Live Forever         0   \n",
-       "2    A Tourist's Guide to Love  A Tourist's Guide to Love         0   \n",
-       "3      Other People's Children     Les Enfants des autres         0   \n",
-       "4               One True Loves             One True Loves         0   \n",
-       "..                         ...                        ...       ...   \n",
-       "150              The Last Face              The Last Face         0   \n",
-       "151              Lost in Paris            Paris pieds nus         0   \n",
-       "152             The Other Half             The Other Half         0   \n",
-       "153     The Ottoman Lieutenant     The Ottoman Lieutenant  40000000   \n",
-       "154             Rich in Love 2            Ricos de Amor 2         0   \n",
-       "\n",
-       "                                  genre language       spoken_languages  \\\n",
-       "0    [Drama, Mystery, Thriller, Horror]       es              [Spanish]   \n",
-       "1                      [Drama, Romance]       en      [French, English]   \n",
-       "2          [Romance, Comedy, Adventure]       en              [English]   \n",
-       "3                               [Drama]       fr               [French]   \n",
-       "4              [Romance, Drama, Comedy]       en              [English]   \n",
-       "..                                  ...      ...                    ...   \n",
-       "150                             [Drama]       en  [English, Portuguese]   \n",
-       "151                            [Comedy]       fr               [French]   \n",
-       "152            [Drama, Comedy, Romance]       en              [English]   \n",
-       "153               [Romance, Drama, War]       en     [English, Turkish]   \n",
-       "154                   [Romance, Comedy]       pt           [Portuguese]   \n",
-       "\n",
-       "                                              homepage  \\\n",
-       "0                                                        \n",
-       "1    https://gooddeedentertainment.com/you-can-live...   \n",
-       "2               https://www.netflix.com/title/81424906   \n",
-       "3    https://www.wildbunch.biz/movie/other-peoples-...   \n",
-       "4                                                        \n",
-       "..                                                 ...   \n",
-       "150                                                      \n",
-       "151                                                      \n",
-       "152                                                      \n",
-       "153  https://www.uphe.com/movies/the-ottoman-lieute...   \n",
-       "154                                                      \n",
-       "\n",
-       "                                              overview  popularity  runtime  \\\n",
-       "0    Argentina, 1970s. A desperate young woman goes...       0.708      102   \n",
-       "1    When Jaime, a gay teenager, is sent to live in...      12.027       96   \n",
-       "2    After an unexpected break up, a travel executi...      25.369       96   \n",
-       "3    Rachel loves her life, her students, her frien...      16.246      104   \n",
-       "4    Emma and Jesse are living the perfect life tog...      28.872      100   \n",
-       "..                                                 ...         ...      ...   \n",
-       "150  Miguel, a heroic Spanish doctor, puts himself ...       9.081      130   \n",
-       "151  Fiona visits Paris for the first time to assis...       6.798       83   \n",
-       "152  When English Mark surprises his American bride...       1.058       94   \n",
-       "153  Lillie, a determined American woman, ventures ...      12.097      111   \n",
-       "154  When the idealistic Paula resumes her work as ...      33.808       89   \n",
-       "\n",
-       "     revenue release_date  vote_average  vote_count  \\\n",
-       "0          0   2021-10-07         4.000           2   \n",
-       "1          0   2023-03-24         7.643          21   \n",
-       "2          0   2023-04-21         6.389         122   \n",
-       "3          0   2022-09-21         6.900         137   \n",
-       "4      37820   2023-04-07         6.681          36   \n",
-       "..       ...          ...           ...         ...   \n",
-       "150        0   2017-01-11         5.617         184   \n",
-       "151        0   2017-01-14         6.051         108   \n",
-       "152        0   2006-05-15         6.708          12   \n",
-       "153   413844   2017-03-10         6.150         236   \n",
-       "154        0   2023-06-02         6.925          60   \n",
-       "\n",
-       "                    production_countries  \n",
-       "0                            [Argentina]  \n",
-       "1                               [Canada]  \n",
-       "2             [United States of America]  \n",
-       "3                               [France]  \n",
-       "4    [Germany, United States of America]  \n",
-       "..                                   ...  \n",
-       "150           [United States of America]  \n",
-       "151                    [Belgium, France]  \n",
-       "152                     [United Kingdom]  \n",
-       "153   [Turkey, United States of America]  \n",
-       "154                             [Brazil]  \n",
-       "\n",
-       "[155 rows x 15 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Convert the results to a DataFrame\n"
+    "tmdb_df = pd.DataFrame(tmdb_movies_list)\n",
+    "tmdb_df"
    ]
   },
   {
