--- a/retrieve_movie_data.ipynb
+++ b/retrieve_movie_data.ipynb
@@ -2222,7 +2222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2455,7 +2455,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2468,7 +2468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2701,7 +2701,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2729,32 +2729,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop \"byline.person\" column\n",
+    "merge_df = merge_df.drop(columns='byline.person')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['title', 'original title', 'budget', 'original_language', 'homepage',\n",
-       "       'overview', 'popularity', 'runtime', 'revenue', 'release_date',\n",
-       "       'vote_average', 'vote_count', 'genres', 'spoken_languages',\n",
-       "       'production_countries', 'web_url', 'snippet', 'source', 'keywords',\n",
-       "       'pub_date', 'word_count', 'headline.main', 'headline.kicker',\n",
-       "       'headline.content_kicker', 'headline.print_headline', 'headline.name',\n",
-       "       'headline.seo', 'headline.sub', 'byline.original', 'byline.person',\n",
-       "       'byline.organization'],\n",
-       "      dtype='object')"
+       "<bound method DataFrame.drop_duplicates of                  title                                     original title  \\\n",
+       "0   Love Lies Bleeding                                 Love Lies Bleeding   \n",
+       "1        Bleeding Love                                      Bleeding Love   \n",
+       "2        Fallen Leaves                     Fallen Leaves, Broken Lighters   \n",
+       "3              Radical           Charlton Heston : la démesure d'un géant   \n",
+       "4                  Foe                                            腹黑少爷小冤家   \n",
+       "5          The Creator  Monkey Business: The Adventures of Curious Geo...   \n",
+       "6  Love at First Sight                         Liebe auf den ersten Blick   \n",
+       "7            Love Life                           Les amours de la pieuvre   \n",
+       "\n",
+       "   budget original_language                                homepage  \\\n",
+       "0       0                en  https://tickets.loveliesbleeding.movie   \n",
+       "1       0                en                                           \n",
+       "2       0                en                                           \n",
+       "3       0                fr                                           \n",
+       "4       0                zh                                           \n",
+       "5       0                en                                           \n",
+       "6       0                de                                           \n",
+       "7       0                fr                                           \n",
+       "\n",
+       "                                            overview  popularity  runtime  \\\n",
+       "0  Reclusive gym manager Lou falls hard for Jacki...      91.748      104   \n",
+       "1  In an effort to reunite with his daughter afte...       9.221       96   \n",
+       "2  This anthology film comprises seven segments c...       0.874       96   \n",
+       "3  A look at the life and work of the iconic US a...       4.307       53   \n",
+       "4                                                          0.600       86   \n",
+       "5  We all know Curious George. But what about his...       2.886       81   \n",
+       "6  After the German reunification: A widowed, une...       1.400      105   \n",
+       "7  An octopus slithers into a narrow crack near t...       2.141       14   \n",
+       "\n",
+       "   revenue release_date  ...  word_count  \\\n",
+       "0  8000000   2024-03-08  ...         986   \n",
+       "1        0   2024-02-16  ...         406   \n",
+       "2        0               ...         873   \n",
+       "3        0   2023-02-24  ...         272   \n",
+       "4        0   2017-06-09  ...         583   \n",
+       "5        0   2017-06-17  ...         676   \n",
+       "6        0   1991-05-28  ...         288   \n",
+       "7        0   1967-01-01  ...         295   \n",
+       "\n",
+       "                                       headline.main headline.kicker  \\\n",
+       "0  ‘Love Lies Bleeding’ Review: Kristen Stewart, ...   Critic’s Pick   \n",
+       "1       ‘Bleeding Love’ Review: On the Road With Dad            None   \n",
+       "2  ‘Fallen Leaves’ Review: Love (and Laughs) Amon...   Critic’s pick   \n",
+       "3              ‘Radical’ Review: To Sergio With Love            None   \n",
+       "4                    ‘Foe’ Review: The Space Between            None   \n",
+       "5  ‘The Creator’ Review: Or How I Learned to Stop...            None   \n",
+       "6  ‘Love at First Sight’ Review: Sense, Sensibili...            None   \n",
+       "7            ‘Love Life’ Review: Encounters in Grief            None   \n",
+       "\n",
+       "  headline.content_kicker                           headline.print_headline  \\\n",
+       "0                    None                    Bad Romance, Hard-Boiled Style   \n",
+       "1                    None  Riding Shotgun With Dad, Onscreen and in Reality   \n",
+       "2                    None                 Love, and Laughs, Among the Ruins   \n",
+       "3                    None                                           Radical   \n",
+       "4                    None                          Love in a Dystopian Time   \n",
+       "5                    None                On the Lam With a Baby-Faced Robot   \n",
+       "6                    None                               Love at First Sight   \n",
+       "7                    None                                         Love Life   \n",
+       "\n",
+       "  headline.name headline.seo headline.sub       byline.original  \\\n",
+       "0          None         None         None     By Manohla Dargis   \n",
+       "1          None         None         None     By Manohla Dargis   \n",
+       "2          None         None         None     By Manohla Dargis   \n",
+       "3          None         None         None  By Natalia Winkelman   \n",
+       "4          None         None         None     By Ben Kenigsberg   \n",
+       "5          None         None         None     By Nicolas Rapold   \n",
+       "6          None         None         None  By Natalia Winkelman   \n",
+       "7          None         None         None     By Ben Kenigsberg   \n",
+       "\n",
+       "  byline.organization  \n",
+       "0                None  \n",
+       "1                None  \n",
+       "2                None  \n",
+       "3                None  \n",
+       "4                None  \n",
+       "5                None  \n",
+       "6                None  \n",
+       "7                None  \n",
+       "\n",
+       "[8 rows x 30 columns]>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Drop \"byline.person\" column\n",
-    "merge_dfmerge_df.drop(columns='byline.person')\n",
-    "merge_df.columns"
+    "# Delete duplicate rows and reset index\n",
+    "\n",
+    "merge_df = merge_df.drop_duplicates()\n"
    ]
   },
   {
